# rori_server

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  config_server.json  exec_mod.sh
src/: main.rs
src/core/: mod.rs
src/core/endpoint_manager/: mod.rs
src/core/module_manager/: mod.rs
src/core/words_manager/: mod.rs
tests/: tests_api.rs  tests_words_manager.rs
