[package]
name = "rori_server"
version = "0.0.0"
authors = ["AmarOk <amarok@enconn.fr>"]

[dependencies]
rustc-serialize = "*"
regex = "*"
lazy_static = "*"
iron = "*"
router = "*"
hyper = "*"
log = "*"
env_logger = "*"
openssl = "0.7.14"
rust-crypto = "^0.2"
cpython = "0.1"
petgraph = "*"

[lib]
name = "main"
